* Complete Java17 changeover. Fixed comments/misspellings. Add final safety. Java17 conventions instead of Java 6.